--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
       justify-content: space-between;
       align-items: center;
       padding: 20px 60px;
+      animation: fadeInDown 1s ease-out forwards;
+      opacity: 0;
     }
 
     header .logo {
@@ -49,6 +51,12 @@
       text-decoration: none;
       color: #333;
       font-weight: 500;
+      position: relative;
+      transition: color 0.3s;
+    }
+
+    nav a:hover {
+      color: #2563eb;
     }
 
     .btn-primary {
@@ -58,6 +66,13 @@
       border-radius: 6px;
       text-decoration: none;
       font-weight: 600;
+      box-shadow: 0 0 0 transparent;
+      transition: all 0.3s ease;
+    }
+
+    .btn-primary:hover {
+      box-shadow: 0 4px 15px rgba(37, 99, 235, 0.5);
+      transform: translateY(-2px);
     }
 
     .hero {
@@ -65,6 +80,8 @@
       padding: 100px 20px 40px;
       max-width: 800px;
       margin: auto;
+      opacity: 0;
+      animation: fadeInUp 1.5s ease-out 0.4s forwards;
     }
 
     .hero h1 {
@@ -92,10 +109,13 @@
       color: #111;
       margin: 0 6px;
       font-weight: 500;
+      transition: all 0.3s ease;
     }
 
     .hero-buttons a:hover {
-      background-color: #e5e7eb;
+      background-color: #2563eb;
+      color: white;
+      transform: translateY(-2px);
     }
 
     .mockup-section {
@@ -105,6 +125,8 @@
       align-items: center;
       margin-top: 60px;
       padding: 40px 0 80px;
+      animation: fadeIn 2s ease-out 0.8s forwards;
+      opacity: 0;
     }
 
     .mockup-bg {
@@ -114,6 +136,7 @@
       background-color: #0f1c8b;
       border-radius: 16px;
       z-index: 0;
+      opacity: 0.95;
     }
 
     .mockup {
@@ -124,6 +147,7 @@
       border-radius: 12px;
       box-shadow: 0 15px 25px rgba(0,0,0,0.1);
       overflow: hidden;
+      animation: float 6s ease-in-out infinite;
     }
 
     .mockup img {
@@ -134,6 +158,8 @@
     .cta {
       text-align: center;
       margin-top: 40px;
+      opacity: 0;
+      animation: fadeInUp 1.5s ease-out 1s forwards;
     }
 
     .cta a {
@@ -144,6 +170,12 @@
       border-radius: 8px;
       text-decoration: none;
       font-weight: 600;
+      transition: all 0.3s ease;
+    }
+
+    .cta a:hover {
+      box-shadow: 0 5px 20px rgba(37, 99, 235, 0.4);
+      transform: translateY(-3px);
     }
 
     .cta p {
@@ -157,6 +189,29 @@
       padding: 40px;
       font-size: 13px;
       color: #666;
+      opacity: 0;
+      animation: fadeIn 1.5s ease-out 1.2s forwards;
+    }
+
+    /* Animations */
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    @keyframes fadeInUp {
+      from { opacity: 0; transform: translateY(30px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    @keyframes fadeInDown {
+      from { opacity: 0; transform: translateY(-30px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    @keyframes float {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-10px); }
     }
 
     @media (max-width: 768px) {
