--- a/index1.html
+++ b/index1.html
@@ -6,6 +6,14 @@
   <title>Onepage – Website Builder</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" href="https://via.placeholder.com/32" type="image/png">
+
+  <style>
+    html, body {
+      overflow: hidden; /* ✅ Scroll disable */
+      height: 100%;     /* body ko fix height dena zaruri hai */
+    }
+  </style>
+  
 </head>
 <body class="bg-white text-gray-800">
 
